manifests/mtls/peer-authentication-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-permissive
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE
